<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_nota_final"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nota_final"
        android:textSize="24sp"
        android:layout_marginTop="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/icon_nota"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="40dp"
        android:src="@drawable/ic_baseline_school_24"
        app:layout_constraintEnd_toEndOf="@+id/txt_nota_final"
        app:layout_constraintTop_toBottomOf="@+id/txt_nota_final" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_phrase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nota_aceitavel"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/icon_nota"
        app:layout_constraintStart_toStartOf="@+id/icon_nota"
        app:layout_constraintEnd_toEndOf="@+id/icon_nota" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/input_nota_um"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/nota_um"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/txt_phrase"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/input_nota_dois"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nota_dois"
        android:layout_marginTop="15dp"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@+id/input_nota_um"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/input_nota_tres"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nota_tres"
        android:layout_marginTop="15dp"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@+id/input_nota_dois"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_calcular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="200dp"
        android:text="@string/calcular"
        app:layout_constraintEnd_toEndOf="@+id/input_nota_tres"
        app:layout_constraintTop_toBottomOf="@+id/input_nota_tres" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_limpar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="84dp"
        android:text="@string/limpar"
        app:layout_constraintEnd_toEndOf="@+id/input_nota_tres"
        app:layout_constraintTop_toBottomOf="@+id/input_nota_tres" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/resultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="344dp"
        android:text="@string/feedback"
        android:textColor="@color/red"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/icon_nota"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="@+id/icon_nota"
        app:layout_constraintTop_toBottomOf="@+id/icon_nota" />
</androidx.constraintlayout.widget.ConstraintLayout>